--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
              data-autoplay="true" data-loop="true" data-wf-ignore="true" data-beta-bgvideo-upgrade="false"
              class="hero-bg_video w-background-video w-background-video-atom">
             <video id="928997e1-4718-0664-2502-14f0274f9595-video" autoplay="" loop=""
-                   style="background-image:url(&quot;../assets-global.website-files.com/5db2630a55881e0e720ef94e/633ce40f276784c3b67d2072_website_background22_2%20copy-poster-00001.jpg&quot;)"
+                   style="background-image:url(&quot;assets-global.website-files.com/5db2630a55881e0e720ef94e/633ce40f276784c3b67d2072_website_background22_2%20copy-poster-00001.jpg&quot;)"
                    muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
                 <source src="assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b8471104_website_background22_2%20copy-transcode.mp4"
                         data-wf-ignore="true">
