--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             <div class="hero-split"><img
                     src="assets-global.website-files.com/kairos-alfarero.png"
                     loading="lazy" width="550" height="Auto" alt=""
-                    srcset="assets-global.website-files.com/kairos-alfarero.png 500w, ../assets-global.website-files.com/kairos-alfarero.png 800w, ../assets-global.website-files.com/kairos-alfarero.png 1080w, ../assets-global.website-files.com/kairos-alfarero.png 1600w, ../assets-global.website-files.com/kairos-alfarero.png 1768w"
+                    srcset="assets-global.website-files.com/kairos-alfarero.png 500w, assets-global.website-files.com/kairos-alfarero.png 800w, assets-global.website-files.com/kairos-alfarero.png 1080w, assets-global.website-files.com/kairos-alfarero.png 1600w, assets-global.website-files.com/kairos-alfarero.png 1768w"
                     sizes="(max-width: 767px) 94vw, (max-width: 991px) 550px, 52vw" class="shadow-two"></div>
         </div>
     </div>
