--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="Iglesia Kairos Santa Cruz" property="og:title">
     <meta content="Somos una iglesia que adora a Dios, valora a las personas y celebra la vida. En Kairos, te damos la bienvenida tal como eres. Ya sea que hayas caminado junto a Dios por años o estés cuestionando su existencia, aquí tienes un lugar. Trae tus interrogantes y dudas, porque en nuestra comunidad no esperamos la perfección. Creemos que la autenticidad nos impulsa hacia adelante."
           property="og:description">
-    <meta content="../assets-global.website-files.com/PARA-PAGINA-WEB-4.png"
+    <meta content="assets-global.website-files.com/PARA-PAGINA-WEB-4.png"
           property="og:image">
     <meta content="Iglesia Kairos Santa Cruz" property="twitter:title">
     <meta content="Somos una iglesia que adora a Dios, valora a las personas y celebra la vida. En Kairos, te damos la bienvenida tal como eres. Ya sea que hayas caminado junto a Dios por años o estés cuestionando su existencia, aquí tienes un lugar. Trae tus interrogantes y dudas, porque en nuestra comunidad no esperamos la perfección. Creemos que la autenticidad nos impulsa hacia adelante."
