--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                                 <div role="listitem" class="w-dyn-item">
                                     <div class="text-center"><a
                                             href="https://sc.iglesiakairos.org/registrations"
-                                            target="_blank" class="btn mt-2 w-button">View All</a></div>
+                                            target="_blank" class="btn mt-2 w-button">Ver todo</a></div>
                                 </div>
                             </div>
                         </div>
