--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 <section class="section-3">
     <div class="w-layout-blockcontainer container-7 w-container"><h2 class="heading-5 color-white">Crece con nosotros</h2>
         <div class="w-row">
-            <div class="column-3 w-col w-col-4"><h6>Curso Maranate</h6>
+            <div class="column-3 w-col w-col-4"><h6>Curso Maranata</h6>
                 <p>Nos preparamos como Iglesia para los desafíos que enfrentaremos antes del regreso de Jesús.</p>
                 <a href="#" target="_blank" class="btn w-button">Más información</a>
             </div>
@@ -624,7 +624,7 @@
                 <p>Este curso nace de la necesidad de una transformación profunda en nuestro estilo de vida. </p>
                 <a href="#" target="_blank" class="btn w-button">Más información</a></div>
             <div class="column-5 w-col w-col-4"><h6>Prédicas</h6>
-                <p>Anímate a empezar un nuevo estilo de vida. Predica lo que vives y vive lo que predicas</p>
+                <p>Anímate a empezar un nuevo estilo de vida. Prédica lo que vives y vive lo que predicas</p>
                 <a href="sermons" target="_blank" class="btn w-button">Mira nuestras prédicas</a></div>
         </div>
     </div>
