--- a/acerca-de-nosotros/equipo/index.html
+++ b/acerca-de-nosotros/equipo/index.html
@@ -142,7 +142,7 @@
                         <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
                     </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/acerca-de-nosotros/lo-que-creemos" class="nav-drop_link w-dropdown-link">Lo que creemos</a>
                         <a href="/acerca-de-nosotros/mision-valores" class="nav-drop_link w-dropdown-link">Misión y Valores</a>
 <!--                        <a href="/acerca-de-nosotros/equipo" class="nav-drop_link w-dropdown-link">Nuestro Equipo</a>-->
@@ -154,7 +154,7 @@
                         <div class="nav-drop_main-text">Conectemos</div>
                         <a  href="#" class="nav-drop_main-link">Conectemos</a></div>
                     <figure class="nav-drop_list w-dropdown-list">
-                        <a href="/connect" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/conecta/quinta-kairos" class="nav-drop_link w-dropdown-link">Quinta Kairos</a>
                         <a href="/conecta/formas-de-servir" class="nav-drop_link w-dropdown-link">Formas de servir</a>
                         <a   href="#" target="_blank" class="nav-drop_link w-dropdown-link">Petición de oración</a>
@@ -164,6 +164,22 @@
                         <a href="/conecta/oracion_24x7" class="nav-drop_link w-dropdown-link">Oración 24/7</a>
                         <a href="/contacto" class="nav-drop_link w-dropdown-link">Contáctanos</a>
                     </figure>
+                </div><div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
+                    <div class="nav-link drop w-dropdown-toggle">
+                        <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
+                        <div class="nav-drop_main-text">Nuestros Cursos</div>
+                        <a  href="#" class="nav-drop_main-link">Cursos</a></div>
+                    <nav class="nav-drop_list w-dropdown-list">
+                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranatha</a>
+                    </nav>
+                </div><div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
+                    <div class="nav-link drop w-dropdown-toggle">
+                        <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
+                        <div class="nav-drop_main-text">Nuestros Cursos</div>
+                        <a  href="#" class="nav-drop_main-link">Cursos</a></div>
+                    <nav class="nav-drop_list w-dropdown-list">
+                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranatha</a>
+                    </nav>
                 </div>
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
                     <div class="nav-link drop w-dropdown-toggle">
@@ -171,8 +187,8 @@
                         <div class="nav-drop_main-text">Nuestros Ministerios</div>
                         <a  href="#" class="nav-drop_main-link">Ministerios</a></div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
-                        <a  href="#" class="nav-drop_link w-dropdown-link">Niños</a>
+
+                         <a  href="https://www.abrazas.com/" class="nav-drop_link w-dropdown-link">Niños</a>
                         <a  href="#" class="nav-drop_link w-dropdown-link">Jovenes</a>
                         <a  href="#" class="nav-drop_link w-dropdown-link">Grupos de conexión</a>
                         <!-- -->
@@ -187,7 +203,7 @@
                         <a  href="#" class="nav-drop_main-link">Recursos</a>
                     </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/recursos/predicas" class="nav-drop_link w-dropdown-link">Prédicas</a>
 
 
@@ -201,7 +217,7 @@
                         <a  href="#" class="nav-drop_main-link">Eventos</a>
                          </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/noticias"  class="nav-drop_link w-dropdown-link">Noticias</a>
 
                            <a href="/calendario" class="nav-drop_link w-dropdown-link">Calendario</a>
