--- a/calendario/index.html
+++ b/calendario/index.html
@@ -157,7 +157,7 @@
                         <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
                     </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/acerca-de-nosotros/lo-que-creemos" class="nav-drop_link w-dropdown-link">Lo que
                             creemos</a>
                         <a href="/acerca-de-nosotros/mision-valores" class="nav-drop_link w-dropdown-link">Misión y
@@ -171,7 +171,7 @@
                         <div class="nav-drop_main-text">Conectemos</div>
                         <a href="#" class="nav-drop_main-link">Conectemos</a></div>
                     <figure class="nav-drop_list w-dropdown-list">
-                        <a href="/connect" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/conecta/quinta-kairos" class="nav-drop_link w-dropdown-link">Quinta Kairos</a>
                         <a href="/conecta/formas-de-servir" class="nav-drop_link w-dropdown-link">Formas de servir</a>
                         <a   href="#" target="_blank" class="nav-drop_link w-dropdown-link">Petición de
@@ -187,10 +187,19 @@
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
                     <div class="nav-link drop w-dropdown-toggle">
                         <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
+                        <div class="nav-drop_main-text">Nuestros Cursos</div>
+                        <a  href="#" class="nav-drop_main-link">Cursos</a></div>
+                    <nav class="nav-drop_list w-dropdown-list">
+                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranatha</a>
+                    </nav>
+                </div>
+                <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
+                    <div class="nav-link drop w-dropdown-toggle">
+                        <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
                         <div class="nav-drop_main-text">Nuestros Ministerios</div>
                         <a href="#" class="nav-drop_main-link">Ministerios</a></div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="#" class="nav-drop_link w-dropdown-link">Niños</a>
                         <a href="#" class="nav-drop_link w-dropdown-link">Jovenes</a>
                         <a href="#" class="nav-drop_link w-dropdown-link">Grupos de conexión</a>
@@ -206,7 +215,7 @@
                         <a href="#" class="nav-drop_main-link">Recursos</a>
                     </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/recursos/predicas" class="nav-drop_link w-dropdown-link">Prédicas</a>
 
 
@@ -221,7 +230,7 @@
                         <a href="#" class="nav-drop_main-link">Eventos</a>
                     </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/noticias"  class="nav-drop_link w-dropdown-link">Noticias</a>
                         <a href="/calendario" class="nav-drop_link w-dropdown-link">Calendario</a>
 
