--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
                     </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/acerca-de-nosotros/lo-que-creemos" class="nav-drop_link w-dropdown-link">Lo que creemos</a>
                         <a href="/acerca-de-nosotros/mision-valores" class="nav-drop_link w-dropdown-link">Misión y Valores</a>
 <!--                        <a href="/acerca-de-nosotros/equipo" class="nav-drop_link w-dropdown-link">Nuestro Equipo</a>-->
@@ -197,7 +197,7 @@
                         <div class="nav-drop_main-text">Conectemos</div>
                         <a  href="#" class="nav-drop_main-link">Conectemos</a></div>
                     <figure class="nav-drop_list w-dropdown-list">
-                        <a href="/connect" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/conecta/quinta-kairos" class="nav-drop_link w-dropdown-link">Quinta Kairos</a>
                         <a href="/conecta/formas-de-servir" class="nav-drop_link w-dropdown-link">Formas de servir</a>
                         <a   href="#" target="_blank" class="nav-drop_link w-dropdown-link">Petición de oración</a>
@@ -211,11 +211,21 @@
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
                     <div class="nav-link drop w-dropdown-toggle">
                         <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
+                        <div class="nav-drop_main-text">Nuestros Cursos</div>
+                        <a  href="#" class="nav-drop_main-link">Cursos</a></div>
+                    <nav class="nav-drop_list w-dropdown-list">
+                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranatha</a>
+                    </nav>
+                </div>
+
+                <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
+                    <div class="nav-link drop w-dropdown-toggle">
+                        <div class="nav-drop_arrow w-icon-dropdown-toggle"></div>
                         <div class="nav-drop_main-text">Nuestros Ministerios</div>
                         <a  href="#" class="nav-drop_main-link">Ministerios</a></div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
-                        <a  href="#" class="nav-drop_link w-dropdown-link">Niños</a>
+
+                         <a  href="https://www.abrazas.com/" class="nav-drop_link w-dropdown-link">Niños</a>
                         <a  href="#" class="nav-drop_link w-dropdown-link">Jovenes</a>
                         <a  href="#" class="nav-drop_link w-dropdown-link">Grupos de conexión</a>
 
@@ -230,7 +240,7 @@
                         <a  href="#" class="nav-drop_main-link">Recursos</a>
                     </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/recursos/predicas" class="nav-drop_link w-dropdown-link">Prédicas</a>
 
 
@@ -244,7 +254,7 @@
                         <a  href="#" class="nav-drop_main-link">Eventos</a>
                          </div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="#" class="nav-drop_link all w-dropdown-link">Todo</a>
+
                         <a href="/noticias"  class="nav-drop_link w-dropdown-link">Noticias</a>
 
                            <a href="/calendario" class="nav-drop_link w-dropdown-link">Calendario</a>
@@ -953,7 +963,6 @@
             $('body').css('overflow', 'auto');
         });
     });
-
     // Add cookie to hide alert modal after close
 
     $.getScript('https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.js', function () {
