--- a/index.html
+++ b/index.html
@@ -771,16 +771,7 @@
     </div>
     <div class="section-bg_partial bg-accent-lighter"></div>
 </section>
-<!--<div class="section pre-footer">-->
-<!--    <div class="container footer-cta">-->
-<!--        <div class="card footer-cta"><h2 class="mb-0 h5">Cottage Grove Church</h2>-->
-<!--            <div class="footer-cta_links"><a  href="#" class="text-link footer-cta">Who&nbsp;We&nbsp;Are</a><a-->
-<!--                     href="#" class="text-link footer-cta">Let's&nbsp;Connect</a><a href="news"-->
-<!--                                                                                         class="text-link footer-cta">What's&nbsp;New</a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+
 <footer class="section footer">
     <div class="container footer-info"><a aria-label="Go to Home Page" href="/" aria-current="page"
                                           class="logo-link_footer w-inline-block w--current">
@@ -883,13 +874,13 @@
         </div>
         <div class="footer-social">
             <a href="https://www.instagram.com/kairossantacruz/" target="_blank" class="footer-social_link w-inline-block">
-                <img src="../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b847107f_logo-insta.svg" alt="Instagram" class="footer-social_img">
+                <img src="assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b847107f_logo-insta.svg" alt="Instagram" class="footer-social_img">
             </a>
             <a aria-label="Kairos Santa Cruz Youtube" href="https://www.youtube.com/channel/UCa3WqRNdfPIWj_Z7uKCaTYQ" target="_blank" class="footer-social_link w-inline-block">
-                <img src="../assets-global.website-files.com/64cacd2631caa034b8470fef/youtube-icon.svg" alt="Youtube" class="footer-social_img">
+                <img src="assets-global.website-files.com/64cacd2631caa034b8470fef/youtube-icon.svg" alt="Youtube" class="footer-social_img">
             </a>
             <a aria-label="Kairos Santa Cruz Facebook" href="https://www.facebook.com/kairos.sc/" target="_blank" class="footer-social_link w-inline-block">
-                <img src="../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b8471063_logo-facebook.svg" alt="Facebook" class="footer-social_img">
+                <img src="assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b8471063_logo-facebook.svg" alt="Facebook" class="footer-social_img">
             </a>
 <!--            <a aria-label="Cottage Grove on Spotify" href="" target="_blank" class="footer-social_link w-inline-block">-->
 <!--                <img src="../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b8471105_logo-spotify.svg" alt="Spotify" class="footer-social_img">-->
