--- a/recursos/predicas/index.html
+++ b/recursos/predicas/index.html
@@ -195,7 +195,7 @@
 
                         <a href="/acerca-de-nosotros/lo-que-creemos" class="nav-drop_link w-dropdown-link">Lo que creemos</a>
                         <a href="/acerca-de-nosotros/mision-valores" class="nav-drop_link w-dropdown-link">Misión y Valores</a>
-<!--                        <a href="/acerca-de-nosotros/equipo" class="nav-drop_link w-dropdown-link">Nuestro Equipo</a>-->
+
                     </nav>
                 </div>
                 <div data-hover="true" data-delay="200" class="nav-drop w-dropdown">
@@ -249,7 +249,7 @@
                         <a href="/recursos/predicas/predicas" class="nav-drop_link w-dropdown-link">Prédicas</a>
 
 
-                        <a href="old/shop" class="nav-drop_link d-none w-dropdown-link">Tienda<span class="text-note"></span></a>
+
                     </nav>
                 </div>
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
@@ -554,19 +554,19 @@
             <div class="col footer-links_col w-col w-col-3 w-col-small-small-stack">
                 <div><a href="/acerca-de-nosotros/lo-que-creemos" class="text-link footer-link">Lo que creemos</a></div>
                 <div><a href="/acerca-de-nosotros/mision-valores" class="text-link footer-link">Misión y Valores</a></div>
-<!--                <div><a href="/acerca-de-nosotros/equipo" class="text-link footer-link">Nuestro equipo</a></div>-->
+
             </div>
             <div class="col footer-links_col w-col w-col-3 w-col-small-small-stack">
-                <div><a  href="#" class="text-link footer-link">Kairos Kids</a></div>
+                  <div><a  href="https://www.abrazas.com/" class="text-link footer-link">Kairos Kids</a></div>
                 <div><a  href="#" class="text-link footer-link">Kairos Jóvenes</a></div>
-                <div><a href="/ministries/connection-groups" class="text-link footer-link">Cuarto de Oración</a></div>
+                <div><a href="cuarto-de-oracion" class="text-link footer-link">Cuarto de Oración</a></div>
                 <div><a href="/conecta/oracion_24x7" class="text-link footer-link">Oración 24/7</a></div>
             </div>
             <div class="col w-col w-col-3 w-col-small-small-stack">
-                <div><a href="https://cottagegrovedsm.churchcenter.com/registrations" target="_blank" class="text-link footer-link">Noticias</a></div>
+                <div><a href="/noticias" class="text-link footer-link">Noticias</a></div>
 
-                <div class="d-none"><a href="online" class="text-link footer-link">Prédicas</a></div>
-                <div><a href="/dar" class="text-link footer-link">Comparte la fe</a></div>
+                <div class="d-none"><a href="recursos/predicas" class="text-link footer-link">Prédicas</a></div>
+                <div><a href="/dar" class="text-link footer-link">Dar</a></div>
             </div>
         </div>
         <div class="footer-social">
@@ -607,7 +607,7 @@
                         <div class="w-form">
                             <form id="mc-embedded-subscribe-form" name="wf-form-mc-embedded-subscribe-form"
                                   data-name="mc-embedded-subscribe-form"
-                                  action="https://cottagegrovedsm.us14.list-manage.com/subscribe/post?u=46e2d1cd6fa7fbbd17a11fc2b&amp;amp;id=61b857ec7b"
+                                  action="#"
                                   method="post" data-wf-page-id="64cacd2631caa034b8470fc1"
                                   data-wf-element-id="fc793f41-c655-3493-73a1-9f16c6a2acba">
                                 <div class="form-group"><label for="mce-EMAIL" class="form-control_label">Dirección de correo electrónico</label>
