--- a/conecta/sabados-de-kairos/index.html
+++ b/conecta/sabados-de-kairos/index.html
@@ -215,7 +215,7 @@
                         <a href="/recursos/predicas" class="nav-drop_link w-dropdown-link">Prédicas</a>
 
 
-                        <a href="old/shop" class="nav-drop_link d-none w-dropdown-link">Tienda<span class="text-note"></span></a>
+
                     </nav>
                 </div>
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
@@ -316,7 +316,7 @@
                     <p><strong>Radial 23 esq. 3er anillo externo, Edificio El Alfarero</strong><br/></p>
                     <p class="mb-1">Cuando vengas a Kairos, podrás esperar que te reciban en un ambiente amigable personas que están realmente emocionadas de verte.
                         Nuestras reuniones duran aproximadamente 2 horas y están llenas de música centrada en el evangelio y enseñanzas de la Biblia.<br/></p>
-<!--                    <a href="https://cottagegrovedsm.churchcenter.com/registrations" target="_blank" class="btn bg-light m-0 d-none w-button">Childcare Registration</a>-->
+<!--                    <a href="#" target="_blank" class="btn bg-light m-0 d-none w-button">Childcare Registration</a>-->
                 </div>
             </div>
         </div>
@@ -476,27 +476,27 @@
                 <div><a href="about/equipo" class="text-link footer-link">Nuestro equipo</a></div>
             </div>
             <div class="col footer-links_col w-col w-col-3 w-col-small-small-stack">
-                <div><a  href="#" class="text-link footer-link">Kairos Kids</a></div>
+                  <div><a  href="https://www.abrazas.com/" class="text-link footer-link">Kairos Kids</a></div>
                 <div><a  href="#" class="text-link footer-link">Kairos Jóvenes</a></div>
-                <div><a href="/ministries/connection-groups" class="text-link footer-link">Cuarto de Oración</a></div>
+                <div><a href="cuarto-de-oracion" class="text-link footer-link">Cuarto de Oración</a></div>
                 <div><a href="/conecta/oracion_24x7" class="text-link footer-link">Oración 24/7</a></div>
             </div>
             <div class="col w-col w-col-3 w-col-small-small-stack">
-                <div><a href="https://cottagegrovedsm.churchcenter.com/registrations" target="_blank" class="text-link footer-link">Noticias</a></div>
+                <div><a href="/noticias" class="text-link footer-link">Noticias</a></div>
 
-                <div class="d-none"><a href="online" class="text-link footer-link">Prédicas</a></div>
-                <div><a href="/dar" class="text-link footer-link">Comparte la fe</a></div>
+                <div class="d-none"><a href="recursos/predicas" class="text-link footer-link">Prédicas</a></div>
+                <div><a href="/dar" class="text-link footer-link">Dar</a></div>
             </div>
         </div>
         <div class="footer-social">
             <a href="https://www.instagram.com/kairossantacruz/" target="_blank" class="footer-social_link w-inline-block">
-                <img src="../../../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b847107f_logo-insta.svg" alt="Instagram" class="footer-social_img">
+                <img src="../../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b847107f_logo-insta.svg" alt="Instagram" class="footer-social_img">
             </a>
             <a aria-label="Kairos Santa Cruz Youtube" href="https://www.youtube.com/channel/UCa3WqRNdfPIWj_Z7uKCaTYQ" target="_blank" class="footer-social_link w-inline-block">
-                <img src="../../../assets-global.website-files.com/64cacd2631caa034b8470fef/youtube-icon.svg" alt="Youtube" class="footer-social_img">
+                <img src="../../assets-global.website-files.com/64cacd2631caa034b8470fef/youtube-icon.svg" alt="Youtube" class="footer-social_img">
             </a>
             <a aria-label="Kairos Santa Cruz Facebook" href="https://www.facebook.com/kairos.sc/" target="_blank" class="footer-social_link w-inline-block">
-                <img src="../../../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b8471063_logo-facebook.svg" alt="Facebook" class="footer-social_img">
+                <img src="../../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b8471063_logo-facebook.svg" alt="Facebook" class="footer-social_img">
             </a>
             <!--            <a aria-label="Cottage Grove on Spotify" href="" target="_blank" class="footer-social_link w-inline-block">-->
             <!--                <img src="../assets-global.website-files.com/64cacd2631caa034b8470fef/64cacd2631caa034b8471105_logo-spotify.svg" alt="Spotify" class="footer-social_img">-->
@@ -526,7 +526,7 @@
                         <div class="w-form">
                             <form id="mc-embedded-subscribe-form" name="wf-form-mc-embedded-subscribe-form"
                                   data-name="mc-embedded-subscribe-form"
-                                  action="https://cottagegrovedsm.us14.list-manage.com/subscribe/post?u=46e2d1cd6fa7fbbd17a11fc2b&amp;amp;id=61b857ec7b"
+                                  action="#"
                                   method="post" data-wf-page-id="64cacd2631caa034b8470fc1"
                                   data-wf-element-id="fc793f41-c655-3493-73a1-9f16c6a2acba">
                                 <div class="form-group"><label for="mce-EMAIL" class="form-control_label">Dirección de correo electrónico</label>
