--- a/cuarto-de-oracion/index.html
+++ b/cuarto-de-oracion/index.html
@@ -181,7 +181,7 @@
                         <div class="nav-drop_main-text">Nuestros Cursos</div>
                         <a  href="#" class="nav-drop_main-link">Cursos</a></div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranatha</a>
+                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranata</a>
                     </nav>
                 </div>
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
@@ -279,7 +279,7 @@
     <div class="container">
         <div class="text-center"><h1 class="h0">Cuarto de Oración</h1>
             <p class="p-big">Ven y sé parte de este hermoso tiempo donde buscamos avivar el fuego de nuestros corazones en la presencia de Dios.<br><br>
-                <a href="https://maps.app.goo.gl/xucVvtErYES1eFRHA" target="_blank" class="btn bg-light m-0 w-button">Ubicación</a>
+                <a href="https://maps.app.goo.gl/xucVvtErYES1eFRHA" target="_blank" class="btn m-0 w-button">Ubicación</a>
             </p>
         </div>
     </div>
@@ -302,7 +302,7 @@
                     <li>Lunes a Viernes 12:30 - 14:00</li>
                     <li>Martes y Jueves 17:30 - 19:00</li>
                     <li>Miercoles 07:00 - 08:00</li>
-                    <a href="https://us02web.zoom.us/j/85200270210?pwd=eEljLzdHdzhuYjZ5RmpzRStESEExQT09" target="_blank" class="btn bg-light m-0 w-button">Entrar al zoom</a>
+                    <a href="https://us02web.zoom.us/j/85200270210?pwd=eEljLzdHdzhuYjZ5RmpzRStESEExQT09" target="_blank" class="btn m-0 w-button">Entrar al zoom</a>
                 </ul></p></div>
         </div>
     </div>
@@ -543,7 +543,7 @@
     </div>
     <div data-w-id="cbcf4980-55f3-0385-db9c-f77e06656368" class="footer-subscribe">
         <div class="footer-subscribe_card"><a data-w-id="a4f4a553-8a9c-0487-82bb-b38fe676e1c2" href="#"
-                                              class="text-link text-btn">Suscríbete a nuestras noticias</a>
+                                              class="text-link text-btn">DAR</a>
             <div class="modal-wrapper">
                 <div class="modal-body">
                     <div class="card modal"><h3 class="mb-1">Suscribir</h3>
