--- a/noticias/index.html
+++ b/noticias/index.html
@@ -190,7 +190,7 @@
                         <div class="nav-drop_main-text">Nuestros Cursos</div>
                         <a  href="#" class="nav-drop_main-link">Cursos</a></div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranatha</a>
+                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranata</a>
                     </nav>
                 </div>
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
@@ -900,7 +900,7 @@
     </div>
     <div data-w-id="cbcf4980-55f3-0385-db9c-f77e06656368" class="footer-subscribe">
         <div class="footer-subscribe_card"><a data-w-id="a4f4a553-8a9c-0487-82bb-b38fe676e1c2" href="#"
-                                              class="text-link text-btn">Suscríbete a nuestras noticias</a>
+                                              class="text-link text-btn">DAR</a>
             <div class="modal-wrapper">
                 <div class="modal-body">
                     <div class="card modal"><h3 class="mb-1">Suscribir</h3>
