--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <link href="assets-global.website-files.com/logo-black-kairos.png" rel="shortcut icon" type="image/x-icon">
     <link href="assets-global.website-files.com/logo-black-kairos.png" rel="apple-touch-icon">
     <link href="https://sc.iglesiakairos.org/" rel="canonical">
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!--    <script src="../www.google.com/recaptcha/api.js" type="text/javascript"></script>&lt;!&ndash; Google Tag Manager &ndash;&gt;-->
 <!--    <script>(function (w, d, s, l, i) {-->
 <!--        w[l] = w[l] || [];-->
@@ -52,7 +54,18 @@
     <link href="unpkg.com/boxicons%402.0.5/css/boxicons.min.css" rel="stylesheet">
 
     <script src="https://js.churchcenter.com/modal/v1"></script>
-
+    <script>
+        let texto = "70151588278357";
+        const copiarContenido = async () => {
+            $('.modal-wrapper').css("display","none");
+            try {
+                await navigator.clipboard.writeText(texto);
+                console.log('Contenido copiado al portapapeles');
+            } catch (err) {
+                console.error('Error al copiar: ', err);
+            }
+        }
+    </script>
     <style>
 
         body {
@@ -211,7 +224,7 @@
                         <div class="nav-drop_main-text">Nuestros Cursos</div>
                         <a  href="#" class="nav-drop_main-link">Cursos</a></div>
                     <nav class="nav-drop_list w-dropdown-list">
-                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranatha</a>
+                        <a  href="http://maranata.com.bo/" class="nav-drop_link w-dropdown-link">Maranata</a>
                     </nav>
                 </div>
                 <div data-hover="true" data-delay="100" class="nav-drop w-dropdown">
@@ -549,9 +562,9 @@
 <section class="section-3">
     <div class="w-layout-blockcontainer container-7 w-container"><h2 class="heading-5 color-white">Crece con nosotros</h2>
         <div class="w-row">
-            <div class="column-3 w-col w-col-4"><h6>Curso Maranate</h6>
+            <div class="column-3 w-col w-col-4"><h6>Curso Maranata</h6>
                 <p>Nos preparamos como Iglesia para los desafíos que enfrentaremos antes del regreso de Jesús.</p>
-                <a href="#" target="_blank" class="btn w-button">Más información</a>
+                <a href="http://maranata.com.bo/" target="_blank" class="btn w-button">Más información</a>
             </div>
             <div class="column-4 w-col w-col-4"><h6>Alineamiento</h6>
                 <p>Este curso nace de la necesidad de una transformación profunda en nuestro estilo de vida y tener relaciones sanas. </p>
@@ -821,34 +834,49 @@
     </div>
     <div data-w-id="cbcf4980-55f3-0385-db9c-f77e06656368" class="footer-subscribe">
         <div class="footer-subscribe_card">
-            <a data-w-id="a4f4a553-8a9c-0487-82bb-b38fe676e1c2" href="#" class="text-link text-btn">Suscríbete a nuestras noticias</a>
+            <a data-w-id="a4f4a553-8a9c-0487-82bb-b38fe676e1c2" href="#" class="text-link text-btn">DAR</a>
             <div class="modal-wrapper">
                 <div class="modal-body">
                     <div class="card modal">
-                        <h3 class="mb-1">Suscribir</h3>
-                        <div class="w-form">
-                            <form id="mc-embedded-subscribe-form" name="wf-form-mc-embedded-subscribe-form"
-                                  data-name="mc-embedded-subscribe-form"
-                                  action="#"
-                                  method="post" data-wf-page-id="64cacd2631caa034b8470fc1"
-                                  data-wf-element-id="fc793f41-c655-3493-73a1-9f16c6a2acba">
-                                <div class="form-group"><label for="mce-EMAIL" class="form-control_label">Dirección de correo electrónico</label>
-                                    <input class="form-control bg-light w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="ejemplo@ejemplo.com" type="email" id="mce-EMAIL" required="">
-                                </div>
-                                <div class="form-group"><label for="mce-FNAME" class="form-control_label">Nombre</label>
-                                    <input class="form-control bg-light w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="Nombre" type="text" id="mce-FNAME" required="">
-                                </div>
-                                <div class="form-group"><label for="mce-LNAME" class="form-control_label">Apellido</label>
-                                    <input class="form-control bg-light w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Apellido" type="text" id="mce-LNAME" required="">
-                                </div>
-                                <input type="submit" data-wait="Espere por favor..." class="btn bg-light m-0 w-button" value="Enviar"></form>
-                            <div class="form-success w-form-done">
-                                <div>¡Gracias! Ya estas suscrito.</div>
+                        <div class="row mt-2 w-row">
+                            <div data-w-id="6eb9f370-29f3-1a13-2172-a72ab71fc6f8"  class="col w-col w-col-4" style="margin-bottom: 10px">
+                                <h2 class="h3" style="font-size: 1.8rem">Dar mediante QR<br/></h2>
+                                <p>Puedes presionar el siguiente botón que descargará el QR para que puedas pagar a través de tu aplicación de banco preferida</p>
+                                <a href="dar/QR_dar.png" download="DAR_Kairos_SantaCruz.png" class=" m-lr-0 w-button" >Descargar QR</a>
                             </div>
-                            <div class="w-form-fail">
-                                <div>Oops! Algo ocurrió mal al enviar tu suscripción, intentalo más tarde.</div>
+                            <div data-w-id="040cff25-2f04-74d6-959b-3879373517a7" class="col w-col w-col-4" style="margin-bottom: 10px">
+                                <h2 class="h3" style="font-size: 1.8rem">Mediante transferencia</h2>
+                                <p>Cuenta:70151588278357<br>Nombre:Cristian Revollo<br>CI:4769070<br>Banco:BCP</p>
+                                <a href="#" onclick="copiarContenido()" target="_blank" id="copiar" class="  m-lr-0 w-button">Copiar Cuenta</a>
+                            </div>
+                            <div data-w-id="6eb9f370-29f3-1a13-2172-a72ab71fc6f7" class="col w-col w-col-4" style="margin-bottom: 10px">
+                                <h2 class="h3" style="font-size: 1.8rem">Buzón</h2>
+                                <p>Durante los servicios de fin de semana, simplemente puede dejar un sobre con el dinero en efectivo en una de las cajas de ofrendas ubicadas cerca de las entradas.</p>
                             </div>
                         </div>
+<!--                        <div class="w-form">-->
+<!--                            <form id="mc-embedded-subscribe-form" name="wf-form-mc-embedded-subscribe-form"-->
+<!--                                  data-name="mc-embedded-subscribe-form"-->
+<!--                                  action="#"-->
+<!--                                  method="post" data-wf-page-id="64cacd2631caa034b8470fc1"-->
+<!--                                  data-wf-element-id="fc793f41-c655-3493-73a1-9f16c6a2acba">-->
+<!--                                <div class="form-group"><label for="mce-EMAIL" class="form-control_label">Dirección de correo electrónico</label>-->
+<!--                                    <input class="form-control bg-light w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="ejemplo@ejemplo.com" type="email" id="mce-EMAIL" required="">-->
+<!--                                </div>-->
+<!--                                <div class="form-group"><label for="mce-FNAME" class="form-control_label">Nombre</label>-->
+<!--                                    <input class="form-control bg-light w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="Nombre" type="text" id="mce-FNAME" required="">-->
+<!--                                </div>-->
+<!--                                <div class="form-group"><label for="mce-LNAME" class="form-control_label">Apellido</label>-->
+<!--                                    <input class="form-control bg-light w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Apellido" type="text" id="mce-LNAME" required="">-->
+<!--                                </div>-->
+<!--                                <input type="submit" data-wait="Espere por favor..." class="btn bg-light m-0 w-button" value="Enviar"></form>-->
+<!--                            <div class="form-success w-form-done">-->
+<!--                                <div>¡Gracias! Ya estas suscrito.</div>-->
+<!--                            </div>-->
+<!--                            <div class="w-form-fail">-->
+<!--                                <div>Oops! Algo ocurrió mal al enviar tu suscripción, intentalo más tarde.</div>-->
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
                     <a href="#" class="modal-close_x">×</a></div>
                 <div class="modal-close_overlay"></div>
@@ -861,6 +889,15 @@
 <script src="assets-global.website-files.com/64cacd2631caa034b8470fef/js/webflow.95c4080c6.js"
         type="text/javascript"></script>
 <script>
+    $(document).on('click', '#copiar', function(e) {
+        Swal.fire({
+            position: "top-end",
+            icon: "success",
+            title: "La cuenta fue copiada con éxito",
+            showConfirmButton: false,
+            timer: 1500
+        });
+    });
     //lock body scroll on nav open
     Webflow.push(function () {
         $('.scroll-lock').click(function (e) {
